fix: Fix generic casting and controllers
The Mod Menu screen now compiles and displays!
Though the widgets aren't fully implemented yet, and the add/remove/reordering buttons aren't displaying for some reason.